--- a/package.json
+++ b/package.json
@@ -13,18 +13,13 @@
   "devDependencies": {
     "nodemon": "^1.18.3"
   },
-  "nodemonConfig": {
-    "ignore": [
-      "data/products.json",
-      "data/cart.json"
-    ]
-  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mysql2": "^2.1.0",
-    "pug": "^2.0.3"
+    "mysql2": "^1.6.1",
+    "pug": "^2.0.3",
+    "sequelize": "^5.21.6"
   }
 }
